...
        self.postPK = postPK
        super.init()
    }
    
    static func create(postPK: Int) -> Self {
        let `self` = self.init(postPK: postPK)
        self.title = "Camera Roll"
        return self
    }
    
    required init() {
        fatalError("init() has not been implemented")
    }
...
