...
        $0.setBackgroundImage(#imageLiteral(resourceName: "cancel-1"), for: .normal)
        $0.dimensionAnchors(size: UI.iconSize).activateAnchors()
    }
    
    var createPostButton = UIButton().then {
        $0.backgroundColor = .clear
        $0.setBackgroundImage(#imageLiteral(resourceName: "checkBox"), for: .normal)
        $0.dimensionAnchors(size: UI.iconSize).activateAnchors()
    }
    
    var titleCounterLable = UILabel().then {
        $0.setup(textColor: .white, fontStyle: .body, textAlignment: .center, numberOfLines: 1)
        $0.adjustsFontSizeToFitWidth = true
...
